compiler/lume_parser/src/snapshots/lume_parser__parser__tests__function_definition_snapshots@statement.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(\"fn main() -> void { let a = 0; }\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: Scalar(
                ScalarType {
                    name: "void",
                    location: Location(
                        13..17,
                    ),
                },
            ),
            block: Block {
                statements: [
                    VariableDeclaration(
                        VariableDeclaration {
                            name: Identifier {
                                name: "a",
                                location: Location(
                                    24..25,
                                ),
                            },
                            variable_type: None,
                            value: Literal(
                                Int(
                                    IntLiteral {
                                        value: 0,
                                        location: Location(
                                            28..29,
                                        ),
                                        kind: I32,
                                    },
                                ),
                            ),
                            location: Location(
                                20..30,
                            ),
                        },
                    ),
                ],
                location: Location(
                    18..32,
                ),
            },
            location: Location(
                0..32,
            ),
        },
    ),
]
