compiler/lume_parser/src/snapshots/lume_parser__parser__tests__generic_class_snapshots@constrained_generics.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(\"class Test<T1: Numeric, T2: Numeric> {}\")"
---
[
    TypeDefinition(
        Class(
            ClassDefinition {
                name: Identifier {
                    name: "Test",
                    location: Location(
                        6..10,
                    ),
                },
                builtin: false,
                members: [],
                type_parameters: [
                    TypeParameter {
                        name: Identifier {
                            name: "T1",
                            location: Location(
                                11..13,
                            ),
                        },
                        constraints: [
                            Scalar(
                                ScalarType {
                                    name: "Numeric",
                                    location: Location(
                                        15..22,
                                    ),
                                },
                            ),
                        ],
                    },
                    TypeParameter {
                        name: Identifier {
                            name: "T2",
                            location: Location(
                                24..26,
                            ),
                        },
                        constraints: [
                            Scalar(
                                ScalarType {
                                    name: "Numeric",
                                    location: Location(
                                        28..35,
                                    ),
                                },
                            ),
                        ],
                    },
                ],
                location: Location(
                    0..39,
                ),
            },
        ),
    ),
]
