compiler/lume_parser/src/snapshots/lume_parser__parser__tests__generic_class_snapshots@empty_generics.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(\"class Test<> {}\")"
---
[
    TypeDefinition(
        Class(
            ClassDefinition {
                name: Identifier {
                    name: "Test",
                    location: Location(
                        6..10,
                    ),
                },
                builtin: false,
                members: [],
                type_parameters: [],
                location: Location(
                    0..15,
                ),
                documentation: None,
            },
        ),
    ),
]
