compiler/lume_parser/src/snapshots/lume_parser__parser__tests__generic_class_snapshots@missing_comma.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_err(\"class Test<T1 T2> {}\")"
---
UnexpectedToken {
    source: NamedSource {
        name: "<temp>",
        content: "class Test<T1 T2> {}",
    },
    range: 14..16,
    expected: ,,
    actual: identifier,
}
