compiler/lume_parser/src/snapshots/lume_parser__parser__tests__generic_class_snapshots@missing_generic.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_err(\"class Test<T1,> {}\")"
---
ExpectedIdentifier {
    source: NamedSource {
        name: "<test>",
        content: "class Test<T1,> {}",
    },
    range: 14..15,
}
