compiler/lume_parser/src/snapshots/lume_parser__parser__tests__generic_class_snapshots@undefined_constraint_type.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_err(\"class Test<T> where T1: Numeric {}\")"
---
ConstrainedTypeParameterNotFound {
    source: NamedSource {
        name: "<temp>",
        content: "class Test<T> where T1: Numeric {}",
    },
    range: 20..22,
    found: "T1",
    defined: [
        "T",
    ],
}
