compiler/lume_parser/src/snapshots/lume_parser__parser__tests__generic_function_snapshots@constrained_generic.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(\"fn test<T: Numeric>() -> void {}\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "test",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [
                TypeParameter {
                    name: Identifier {
                        name: "T",
                        location: Location(
                            8..9,
                        ),
                    },
                    constraints: [
                        Scalar(
                            ScalarType {
                                name: Path {
                                    name: Identifier {
                                        name: "Numeric",
                                        location: Location(
                                            11..18,
                                        ),
                                    },
                                    root: NamespacePath {
                                        path: [],
                                        location: Location(
                                            0..0,
                                        ),
                                    },
                                    location: Location(
                                        11..18,
                                    ),
                                },
                            },
                        ),
                    ],
                },
            ],
            return_type: Some(
                Scalar(
                    ScalarType {
                        name: Path {
                            name: Identifier {
                                name: "void",
                                location: Location(
                                    25..29,
                                ),
                            },
                            root: NamespacePath {
                                path: [],
                                location: Location(
                                    0..0,
                                ),
                            },
                            location: Location(
                                25..29,
                            ),
                        },
                    },
                ),
            ),
            block: Block {
                statements: [],
                location: Location(
                    30..32,
                ),
            },
            location: Location(
                0..32,
            ),
            documentation: None,
        },
    ),
]
